--- a/index.html
+++ b/index.html
@@ -78,8 +78,14 @@
     </main>
     <footer class="footer">
         <div class="contacts-footer">
-            <a class="contacts-footer__link" href="mailto:murayzes@gmail.com"><img class="contacts-footer__img" src="images/icons/email_icon.svg" alt="email_ico">murayzes@gmail.com</a>
-            <a class="contacts-footer__link" href="tel:+380961145453"><img class="contacts-footer__img" src="images/icons/phone_icon.svg" alt="phone_ico">+380961145453</a>
+            <a class="contacts-footer__link" href="mailto:murayzes@gmail.com">
+                <img class="contacts-footer__img" src="images/icons/email_icon.svg" alt="email_ico">
+                <p class="contacts-footer__text">murayzes@gmail.com</p> 
+            </a>
+            <a class="contacts-footer__link" href="tel:+380961145453">
+                <img class="contacts-footer__img" src="images/icons/phone_icon.svg" alt="phone_ico">
+                <p class="contacts-footer__text">+380961145453</p>
+            </a>
         </div>
     </footer>  
 </body>
