added_feedback_via_skype

--- a/index.html
+++ b/index.html
@@ -80,11 +80,15 @@
         <div class="contacts-footer">
             <a class="contacts-footer__link" href="mailto:murayzes@gmail.com">
                 <img class="contacts-footer__img" src="images/icons/email_icon.svg" alt="email_ico">
-                <p class="contacts-footer__text">murayzes@gmail.com</p>
+                <p class="contacts-footer__text">Send email</p>
             </a>
             <a class="contacts-footer__link" href="tel:+380961145453">
                 <img class="contacts-footer__img" src="images/icons/phone_icon.svg" alt="phone_ico">
-                <p class="contacts-footer__text">+380961145453</p>
+                <p class="contacts-footer__text">Call the phone</p>
+            </a>
+            <a class="contacts-footer__link" href="skype:+380961145453">
+                <img class="contacts-footer__img" src="images/icons/skype_icon.svg" alt="skipe_ico">
+                <p class="contacts-footer__text">Call the skype</p>
             </a>
         </div>
     </footer>
